--- a/project/DeviantArtBrowser/CView.ui
+++ b/project/DeviantArtBrowser/CView.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>CView</string>
   </property>
+  <property name="windowOpacity">
+   <double>1.000000000000000</double>
+  </property>
   <widget class="QWidget" name="centralWidget"/>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
